// Copyright 2024 CloudWeGo Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package go.kitex.test.server;

message TrafficEnv {
  bool Open = 1;
  string Env = 2;
}

message Base {
  string LogID = 1;
  string Caller = 2;
  string Addr = 3;
  string Client = 4;
  TrafficEnv traffic_env = 5;
  map<string, string> Extra = 6;
}

message BaseResp {
  string StatusMessage = 1;
  int32 StatusCode = 2;
  map<string, string> Extra = 3;
}

message ExampleReq {
  string Msg = 1;
  Base base = 2;
}

message ExampleResp {
  string Msg = 1;
  BaseResp base_resp = 2;
}

service ExampleService {
  rpc ExampleMethod(ExampleReq) returns (ExampleResp);
}
